[fix] make backgrouns less transparent for better readability

--- a/css/main.scss
+++ b/css/main.scss
@@ -58,7 +58,7 @@ h1, h2 { font-weight: 400 }
 
 a { color: #eee }
 a:hover { color: #aaa }
-.bg { background-color: rgba(0,0,0,0.7) }
+.bg { background-color: rgba(0,0,0,0.8) }
 .hidden { display: none }
 .sidebar {}
 
